fix images, spacing and react error

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -8,6 +8,7 @@
   @extend %flex-column;
   width: 100%;
   background-color: $deep-sea;
+  z-index: 5;
 
   a {
     text-align: center;
